@@ -1,3 +1,11 @@
+2007-03-18  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* gas/arm/mul-overlap.s: New.
+	* gas/arm/mul-overlap.d: New.
+	* gas/arm/mul-overlap.l: New.
+	* gas/arm/mul-overlap-v6.s: New.
+	* gas/arm/mul-overlap-v6.d: New.
+
 2007-03-14  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gas/arm/thumbver.d, gas/arm/thumbver.s: New test.
